src/styles/main.css
/* ... */
.theme-picker.is-open {
    height: 11rem;
}

.theme-picker h1 {
    font-size: 1.4em;
    text-align: center;
    margin-bottom: 0;
}

.theme-picker nav {
    position: relative;
    z-index: 2;
    width: 100%;
    overflow-y: hidden;
    scroll-behavior: smooth;
}

.theme-picker ul {
    display: flex;
    flex-direction: row;
    list-style: none;
    margin: 0;
    padding: 1em 40px 2em;
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: auto;
    text-align: center;
    width: 100%;
}

.theme-picker li {
    border-radius: 0.4em;
    min-width: 140px;
    transform: scale(1);
    transition: transform 0.2s;
}

.theme-picker li:hover {
    box-shadow: 0 0 8px var(--foreground);
    transform: scale(1.05);
}

.theme-picker li.current {
    box-shadow: 0 0 0 2px var(--accent);
}

.theme-picker li + li {
    margin-left: 1rem;
}

.theme-picker li button {
    background-color: var(--background);
    color: var(--foreground);
    border: none;
    border-radius: 0.4em;
    padding: 1em;
    font-size: 0.9em;
    width: 100%;
    cursor: pointer;
}

.theme-picker .swatches {
    margin-top: 0.5em;
    display: block;
}

.theme-picker .swatches span {
    display: inline-block;
    width: 22px;
    height: 22px;
    border-radius: 100%;
    background-color: black;
    border: 2px solid white;
}

.theme-picker .swatches span + span {
    margin-left: -0.995em;
}

.theme-picker .swatches span.background {
    background-color: var(--background);
}

.theme-picker .swatches span.background-muted {
    background-color: var(--background-muted);
}

.theme-picker .swatches span.foreground {
    background-color: var(--foreground);
}

.theme-picker .swatches span.foreground-muted {
    background-color: var(--foreground-muted);
}

.theme-picker .swatches span.accent {
    background-color: var(--accent);
}

ul.alphabet {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
}

p.down-the-rabbit-hole .margin-note {
    position: relative;
}

p.down-the-rabbit-hole .margin-note img {
    position: absolute;
    top: -200px;
}

.page-meta {
    position: relative;
    background-color: var(--background-muted);
    border-top: 3px solid var(--accent);
    margin-top: 3rem;
}

.page-meta > div {
    max-height: 0;
    overflow: hidden;
    display: none;
    transition: height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
    padding: 1rem 0;
}

.page-meta > div:target {
    display: block;
    max-height: 9999px;
}

.page-meta .pull-tab {
    background-color: var(--background-muted);
    position: absolute;
    top: -2.5rem;
    padding: 0 0.5rem;
    height: 2.5rem;
    border-top: 3px solid var(--accent);
    display: flex;
    align-items: center;
}

aside.notes {
    background-color: var(--background-muted);
    color: var(--jumbo-nav-text-color);
    font-size: 1em;
    padding: 20px;
    margin: 20px;
    border-radius: 35px;
    margin-top: 80px;
}

aside.notes h4 {
    font-family: sans-serif;
    color: var(--jumbo-nav-accent-color);
    margin-top: 0;
    font-style: italic;
    font-stretch: expanded;
    font-family: sans-serif;
}

aside.notes ul li {
    list-style: none;
    color: var(--background);
    border-radius: 10px;
    background-color: var(--accent);
    font-size: 0.9em;
    padding: 20px;
    box-shadow: -10px 8px 5px var(--background);
    margin-bottom: 18px;
}

.page-meta {
    position: relative;
    background-color: var(--background-muted);
    border-top: 3px solid var(--accent);
    margin-top: 3rem;
}

.page-meta > div {
    max-height: 0;
    overflow: hidden;
    display: none;
    transition: height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
    padding: 1rem 0;
}

.page-meta > div:target {
    display: block;
    max-height: 9999px;
}

.page-meta .pull-tab {
    background-color: var(--background-muted);
    position: absolute;
    top: -2.5rem;
    padding: 0 0.5rem;
    height: 2.5rem;
    border-top: 3px solid var(--accent);
    display: flex;
    align-items: center;
}

#front-content-display {
    gap: 60px;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    display: grid;
}

#front-content-display section:nth-child(1) {
    grid-column: 1;
    grid-row: 1;
}

#front-content-display section:nth-child(2) {
    grid-column: 1;
}

#front-content-display section:nth-child(3) {
    grid-column: 2;
    grid-row: 1 / span 4;
}

article#page-post header h1 {
    font-size: 5rem;
}

article#page-post h3 {
    font-size: 2.5rem;
    font-family: "canela_deck_trialthin", "Helvetica", serif;
    font-weight: 100;
    margin: 1rem 0 0 0;
}
.header-title {
    font-size: 3.8rem;
    font-family: var(--font-serif);
    line-height: var(--leading-tighter);
    font-family: "canela_deck_trialthin", "Helvetica", serif;
    transition: 0.4s ease-in-out;
    cursor: pointer;
}
.header-title:hover {
    color: var(--accent);
}

.header-subtitle {
    font-size: 1.8rem;
    font-family: "canela_deck_trialthin", "Helvetica", serif;
    color: var(--color-gray-400);
    font-weight: 100;
    line-height: 1.1;
    margin: .0875em 0 .0875em;
    transition: 0.3s ease-in-out;
}
@media (max-width: 864px) {
    .container {
        margin: 0;
        width: 100%;
        padding: 0 1em;
    }

    body > header > div.container {
        margin-top: 40px;
    }

    #front-content-display section:nth-child(3) {
        grid-column: 1;
        grid-row: auto;
    }

    article#page-post header h1 {
      font-size: 3.5rem;
    }

    .special.header {
        font-size: 3rem;
        line-height: 1.4;
    }
}

